@@ -139,5 +139,21 @@
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
 		/>
+		
+	<browser:viewlet
+        name="collective.perseo.trackingcodeheader"
+        manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+        class=".viewlets.TrackingCodeHeaderViewlet"
+        layer=".interfaces.IPerSEOLayer"
+        permission="zope2.View"
+        />
+        
+	<browser:viewlet
+        name="collective.perseo.trackingcodefooter"
+        manager="plone.app.layout.viewlets.interfaces.IPortalFooter"
+        class=".viewlets.TrackingCodeFooterViewlet"
+        layer=".interfaces.IPerSEOLayer"
+        permission="zope2.View"
+        />
 
 </configure>
